fix the contrast ratio issue in Lighthouse

--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -175,7 +175,7 @@ input[type="submit"] {
   font-family: var(--ff-bevan);
   font-weight: 500;
   background: white;
-  color: #e9cfa9;
+  color: #cbb390;
   border-radius: 1rem;
   border: 2px solid rgb(215, 185, 142);
   margin-top: 5rem;
